[package]
name = "tg-keeper"
version = "0.2.0"
edition = "2024"

[dependencies]
grammers-client = { git = "https://github.com/Lonami/grammers", rev = "550ab88" }
grammers-session = { git = "https://github.com/Lonami/grammers", rev = "550ab88" }
grammers-mtsender = { git = "https://github.com/Lonami/grammers", rev = "550ab88" }
tokio = { version = "1.48", features = ["full"] }
anyhow = "1.0"
env_logger = "0.10"
log = "0.4"
config = "0.13"
mime2ext = "0.1"
ctrlc = "3.5"
rpassword = "7.3"
futures = "0.3"

rusqlite = { version = "0.37", features = ["bundled", "serde_json"] }
rusqlite_migration = "2.3"
